dummy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      labels:
        app: dummy
    spec:
      containers:
      - name: dummy
        image: nginx:latest
        ports:
        - containerPort: 80
