dummy/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvis-backend
spec:
  selector:
    app: kvis-backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8085
  type: LoadBalancer
