dummy/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvis-client
spec:
  selector:
    app: kvis-client
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
