dummy/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvis-client
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "custom"
spec:
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: kvis-client
            port:
              number: 8083
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: kvis-backend
            port:
              number: 8082
